Require Graph services to be Serializable instead of just Object.